# FAZIA_FULL_GEO

./: CMakeLists.txt  example.cc  vis.mac
Backup/: FAZIADetectorConstruction.cc
BackupDete/: FAZIADetectorConstruction.cc  FAZIADetectorConstructionAll.cc  FAZIADetectorConstructionPre.cc
src/: FAZIADetectorConstruction.cc  FAZIAEventAction.cc  FAZIAEventAction.hh  FAZIAPrimaryGeneratorAction.cc  FAZIARunAction.cc  FAZIASteppingAction.cc  FAZIASteppingAction.hh
